# pixel

./: .gitignore  AGENTS.md  README.md  pyproject.toml  report.json
.devcontainer/: devcontainer.json
docs/: architecture.md
src/pixel/: __init__.py  ai_cleanup.py  ai_gemini.py  alpha.py  cleanup.py  cli.py  colors.py  export.py  grid.py  ingest.py  models.py  palette.py  pipeline.py  rasterizer.py  validate.py
tests/: test_ai_cleanup.py  test_ai_gemini.py  test_alpha_palette.py  test_cleanup.py  test_cli.py  test_grid.py  test_pipeline.py  test_rasterizer.py
